--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -12,39 +12,115 @@
             <tbody>
                 <tr>
                     <td>{{ name }}</td>
-                    <td><code>uppercase</code></td>
-                    <td><code>{{ name | uppercase }}</code></td>
+                    <td>uppercase</td>
+                    <td>
+                        {{ name | uppercase }}
+                    </td>
                 </tr>
                 <tr>
                     <td>{{ name }}</td>
-                    <td><code>lowercase</code></td>
-                    <td><code>{{ name | lowercase }}</code></td>
+                    <td>lowercase</td>
+                    <td>
+                        {{ name | lowercase }}
+                    </td>
                 </tr>
                 <tr>
                     <td>{{ name }}</td>
-                    <td><code>slice:3</code></td>
-                    <td><code>{{ name | slice:3 }}</code></td>
+                    <td>slice:3</td>
+                    <td>
+                        {{ name | slice : 3 }}
+                    </td>
                 </tr>
                 <tr>
                     <td>{{ name }}</td>
-                    <td><code>slice:0:3</code></td>
-                    <td><code>{{ name | slice:0:3 }}</code></td>
+                    <td>slice:0:3</td>
+                    <td>
+                        {{ name | slice : 0 : 3 }}
+                    </td>
                 </tr>
                 <tr>
                     <td>{{ array }}</td>
-                    <td><code>slice:1:5</code></td>
-                    <td><code>{{ array | slice:1:5 }}</code></td>
+                    <td>slice:1:5</td>
+                    <td>
+                        {{ array | slice : 1 : 5 }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>{{ PI }}</td>
+                    <td>number:'3.0-0'</td>
+                    <td>
+                        {{ PI | number : "3.0-0" }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>{{ PI }}</td>
+                    <td>number</td>
+                    <td>
+                        {{ PI | number : ".0-4" }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>{{ percentage }}</td>
+                    <td>percent</td>
+                    <td>
+                        {{ percentage | percent }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>{{ percentage }}</td>
+                    <td>percent</td>
+                    <td>
+                        {{ percentage | percent : "2.2-2" }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>{{ salary }}</td>
+                    <td>currency</td>
+                    <td>
+                        {{ salary | currency }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>{{ salary }}</td>
+                    <td>currency:'EUR'</td>
+                    <td>
+                        {{ salary | currency : "EUR" }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>{{ salary }}</td>
+                    <td>currency:'CAD'</td>
+                    <td>
+                        {{ salary | currency : "CAD" : "symbol" : ".0-0" }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>{{ salary }}</td>
+                    <td>currency:'CAD'</td>
+                    <td>
+                        {{ salary | currency : "CAD" : "symbol" : ".0-0" }}
+                    </td>
+                </tr>
+                <tr>
+                    <td>{{ promise }}</td>
+                    <td>async</td>
+                    <td>
+                        {{ promise | async}}
+                    </td>
                 </tr>
             </tbody>
         </table>
-        <!-- <h4>
-            <ul>
-                @for(item of array; track item){
-                <li>{{ item.toString()| slice: 5:20 }}</li>
-                }
+        <h4><small>Slice1:4</small></h4>
 
-            </ul>
-        </h4> -->
-
+        <ul class="list-group">
+            @for(item of arr; track item ){
+            <li class="list-group-item">{{ item | slice:1:4}}</li>
+            }
+        </ul>
+        <h3>JSON</h3>
+        <hr />
+        <div class=" class row ">
+            {{ hero | json }}
+        </div>
     </div>
 </div>
