--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -108,6 +108,34 @@
                         {{ promise | async}}
                     </td>
                 </tr>
+                <tr>
+                    <td>{{ date }}</td>
+                    <td>date</td>
+                    <td>
+                        {{ date | date}}
+                    </td>
+                </tr>
+                <tr>
+                    <td>{{ date }}</td>
+                    <td>date'medium'</td>
+                    <td>
+                        {{ date | date:'medium'}}
+                    </td>
+                </tr>
+                <tr>
+                    <td>{{ date }}</td>
+                    <td>date:'short'</td>
+                    <td>
+                        {{ date | date:'short'}}
+                    </td>
+                </tr>
+                <tr>
+                    <td>{{ date }}</td>
+                    <td>date:'own'</td>
+                    <td>
+                        {{ date | date:'MMMM-dd'}}
+                    </td>
+                </tr>
             </tbody>
         </table>
         <h4><small>Slice1:4</small></h4>
