--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -136,13 +136,39 @@
                         {{ date | date:'MMMM-dd'}}
                     </td>
                 </tr>
+                <tr>
+                    <td>{{ date }}</td>
+                    <td>date:'own'</td>
+                    <td>
+                        {{ date | date:'MMMM-dd':'':'en'}}
+                    </td>
+                </tr>
+                <tr>
+                    <td>{{ date }}</td>
+                    <td>date:'own'</td>
+                    <td>
+                        {{ date | date:'MMMM-dd':'':'fr'}}
+                    </td>
+                </tr>
+                <tr>
+                    <td>{{ date }}</td>
+                    <td>date:'MMMM - dd':'':'{{ language }}'
+                        <br>
+                        <button (click)="language='ES'" class="mr-1 btn btn-primary ">Spanish</button>
+                        <button (click)="language='EN' " class="mr-1 btn btn-secondary ">English</button>
+                        <button (click)="language='FR' " class="mr-1 btn btn-success ">French</button>
+                    </td>
+                    <td>
+                        {{ date | date:'MMMM - dd':'':language}}
+                    </td>
+                </tr>
             </tbody>
         </table>
         <h4><small>Slice1:4</small></h4>
 
-        <ul class="list-group">
+        <ul class="list-group ">
             @for(item of arr; track item ){
-            <li class="list-group-item">{{ item | slice:1:4}}</li>
+            <li class="list-group-item ">{{ item | slice:1:4}}</li>
             }
         </ul>
         <h3>JSON</h3>
@@ -151,4 +177,4 @@
             {{ hero | json }}
         </div>
     </div>
-</div>
+</div>margi
