feta: custom capitalize pipe

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -18,6 +18,13 @@
                     </td>
                 </tr>
                 <tr>
+                    <td>{{ name1 }}</td>
+                    <td>capitalize</td>
+                    <td>
+                        {{ name1 | capitalize}}
+                    </td>
+                </tr>
+                <tr>
                     <td>{{ name }}</td>
                     <td>lowercase</td>
                     <td>
