--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -183,5 +183,14 @@
         <div class=" class row ">
             {{ hero | json }}
         </div>
+        <h3 class="mt-4">Dom Seguro</h3>
+        <hr>
+        <div class="class row mb-5">
+            <div class="class col">
+                <iframe width="560" height="315" [src]="videoUrl | domseguro" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin"
+                    allowfullscreen></iframe>
+            </div>
+        </div>
     </div>
-</div>margi
+
+</div>
